tests/base/invalid/Return_CompileFail_1.whiley
import * from whiley.lang.*

bool f():
    return 1
